<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"
            android:textColor="#000000"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

        <ImageView
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:src="@drawable/cafeamano"
            android:layout_gravity="center"
            android:background="@color/backgroundphoto" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/button_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direccion"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:padding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/button_horarios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/horarios"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:padding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/colorPrimary"/>

            <Button
                android:id="@+id/button_informacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/informacion"
                android:layout_gravity="center_vertical"
                android:textColor="#000000"
                android:padding="10dp"
                android:fontFamily="sans-serif-condensed"
                android:background="@color/colorPrimary"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <TextView
            android:id="@+id/text_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dir"
            android:textColor="#000000"
            android:textSize="20sp"
            android:padding="30dp"/>

    </LinearLayout>

    </LinearLayout>



</RelativeLayout>